Fix horizontal scroll and delete commented links

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,8 +14,8 @@ html {
   --golden: #fbd784;
   --black: #0b1d26;
   font-family: "Gilroy-Bold", sans-serif;
-  width: 1920px;
-  min-height: 100vh;
+  width: 1900px;
+  /* min-height: 100vh; */
   background: url(../images/VG.png) 0 768px / contain no-repeat,
     url(../images/MG.png) 0 464px / contain no-repeat,
     url(../images/HG.png) 0 0 / contain no-repeat, var(--black);
@@ -117,9 +117,6 @@ html {
   padding-top: 20px;
   padding-right: 25px;
   height: 60px;
-
-  box-sizing: border-box;
-
   display: inline-block;
   text-decoration: none;
   color: var(--white);
